--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20231201</p>
       <p>Imvertor: Nightly-build.13</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.09-1-20231201-20240208-170152</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.09-1-20231201-20240209-094934</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -1351,7 +1351,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77685e6073">
+                  <section id="detail_d77697e6038">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1390,7 +1390,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77685e6258">
+                  <section id="detail_d77697e6223">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1428,7 +1428,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77685e6443">
+                  <section id="detail_d77697e6408">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1467,7 +1467,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77685e6628">
+                  <section id="detail_d77697e6593">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1505,7 +1505,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77685e6813">
+                  <section id="detail_d77697e6778">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1544,7 +1544,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77685e6998">
+                  <section id="detail_d77697e6963">
                      <h4>  monitoringbuis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1597,7 +1597,7 @@
                               <th>Definitie</th>
                               <td>
                                  
-                                 <p>Een verkenning die is uitgevoerd voorafgaand aan de plaatsing van een grondwatermonitoringput.</p>
+                                 <p>Een verkenning die is uitgevoerd voorafgaand aan de inrichting van een grondwatermonitoringput.</p>
                                  </td>
                            </tr>
                            <tr>
@@ -2449,7 +2449,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77685e10133">
+                  <section id="detail_d77697e10081">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4041,7 +4041,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77685e16009">
+                  <section id="detail_d77697e15915">
                      <h4>  toegepast materiaal</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4080,7 +4080,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77685e16212">
+                  <section id="detail_d77697e16118">
                      <h4>  filter</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4119,7 +4119,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77685e16415">
+                  <section id="detail_d77697e16321">
                      <h4>  stijgbuisdeel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4158,7 +4158,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77685e16618">
+                  <section id="detail_d77697e16524">
                      <h4>  zandvang</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4197,7 +4197,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77685e16821">
+                  <section id="detail_d77697e16727">
                      <h4>  ingeplaatst deel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4236,7 +4236,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77685e17024">
+                  <section id="detail_d77697e16930">
                      <h4>  geo-ohmkabel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -5092,7 +5092,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77685e20454">
+                  <section id="detail_d77697e20318">
                      <h4>  elektrode</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
