--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -1327,7 +1327,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77685e6073">
+         <section id="detail_d77697e6038">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1366,7 +1366,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77685e6258">
+         <section id="detail_d77697e6223">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1404,7 +1404,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77685e6443">
+         <section id="detail_d77697e6408">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1443,7 +1443,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77685e6628">
+         <section id="detail_d77697e6593">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1481,7 +1481,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77685e6813">
+         <section id="detail_d77697e6778">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1520,7 +1520,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77685e6998">
+         <section id="detail_d77697e6963">
             <h4>  monitoringbuis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1573,7 +1573,7 @@
                      <th>Definitie</th>
                      <td>
                         
-                        <p>Een verkenning die is uitgevoerd voorafgaand aan de plaatsing van een grondwatermonitoringput.</p>
+                        <p>Een verkenning die is uitgevoerd voorafgaand aan de inrichting van een grondwatermonitoringput.</p>
                         </td>
                   </tr>
                   <tr>
@@ -2425,7 +2425,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77685e10133">
+         <section id="detail_d77697e10081">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4017,7 +4017,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77685e16009">
+         <section id="detail_d77697e15915">
             <h4>  toegepast materiaal</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4056,7 +4056,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77685e16212">
+         <section id="detail_d77697e16118">
             <h4>  filter</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4095,7 +4095,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77685e16415">
+         <section id="detail_d77697e16321">
             <h4>  stijgbuisdeel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4134,7 +4134,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77685e16618">
+         <section id="detail_d77697e16524">
             <h4>  zandvang</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4173,7 +4173,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77685e16821">
+         <section id="detail_d77697e16727">
             <h4>  ingeplaatst deel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4212,7 +4212,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77685e17024">
+         <section id="detail_d77697e16930">
             <h4>  geo-ohmkabel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -5068,7 +5068,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77685e20454">
+         <section id="detail_d77697e20318">
             <h4>  elektrode</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
