--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20231201</p>
       <p>Imvertor: Nightly-build.13</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.09-1-20231201-20240222-122649</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.09-1-20231201-20240222-124534</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -3054,6 +3054,10 @@
                               <td>Nee</td>
                            </tr>
                            <tr>
+                              <th>Mogelijk geen waarde</th>
+                              <td>Ja</td>
+                           </tr>
+                           <tr>
                               <th>Reden geen waarde</th>
                               <td>
                                  
@@ -4049,7 +4053,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77667e15893">
+                  <section id="detail_d77667e15903">
                      <h4>  toegepast materiaal</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4088,7 +4092,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77667e16096">
+                  <section id="detail_d77667e16106">
                      <h4>  filter</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4127,7 +4131,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77667e16299">
+                  <section id="detail_d77667e16309">
                      <h4>  stijgbuisdeel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4166,7 +4170,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77667e16502">
+                  <section id="detail_d77667e16512">
                      <h4>  zandvang</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4205,7 +4209,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77667e16705">
+                  <section id="detail_d77667e16715">
                      <h4>  ingeplaatst deel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4244,7 +4248,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77667e16908">
+                  <section id="detail_d77667e16918">
                      <h4>  geo-ohmkabel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -5108,7 +5112,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77667e20302">
+                  <section id="detail_d77667e20312">
                      <h4>  elektrode</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
