--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -3030,6 +3030,10 @@
                      <td>Nee</td>
                   </tr>
                   <tr>
+                     <th>Mogelijk geen waarde</th>
+                     <td>Ja</td>
+                  </tr>
+                  <tr>
                      <th>Reden geen waarde</th>
                      <td>
                         
@@ -4025,7 +4029,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77667e15893">
+         <section id="detail_d77667e15903">
             <h4>  toegepast materiaal</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4064,7 +4068,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77667e16096">
+         <section id="detail_d77667e16106">
             <h4>  filter</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4103,7 +4107,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77667e16299">
+         <section id="detail_d77667e16309">
             <h4>  stijgbuisdeel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4142,7 +4146,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77667e16502">
+         <section id="detail_d77667e16512">
             <h4>  zandvang</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4181,7 +4185,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77667e16705">
+         <section id="detail_d77667e16715">
             <h4>  ingeplaatst deel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4220,7 +4224,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d77667e16908">
+         <section id="detail_d77667e16918">
             <h4>  geo-ohmkabel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -5084,7 +5088,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d77667e20302">
+         <section id="detail_d77667e20312">
             <h4>  elektrode</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
