--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20231201</p>
       <p>Imvertor: 3.0.0</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.09-1-20231201-20240306-074058</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.09-1-20231201-20240313-085037</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -63,7 +63,7 @@
          <section>
             <h2>Het domeinmodel</h2>
             <section>
-               <div class="imageinfo overview"><img src="Images/EAID_E820AF53_7FB7_42e8_95C4_297D746526CE.png" usemap="#imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE"><area shape="rect" alt="Registratieobject" coords="656,42,929,217" href="#global_class_Model_Registratieobject"><area shape="rect" alt="Geotechnisch Sondeeronderzoek" coords="1363,651,1589,754" href="#global_class_Model_GeotechnischSondeeronderzoek"><area shape="rect" alt="Verkenning" coords="1143,614,1264,664" href="#global_class_Model_Verkenning"><area shape="rect" alt="Booronderzoek" coords="1363,534,1589,638" href="#global_class_Model_Booronderzoek"><area shape="rect" alt="Monitoringbuis" coords="534,806,1026,1235" href="#global_class_Model_Monitoringbuis"><area shape="rect" alt="Toegepast materiaal" coords="534,1301,808,1440" href="#global_class_Model_Toegepastmateriaal"><area shape="rect" alt="Ingeplaatst deel" coords="1170,972,1484,1110" href="#global_class_Model_Ingeplaatstdeel"><area shape="rect" alt="Zandvang" coords="1170,806,1372,912" href="#global_class_Model_Zandvang"><area shape="rect" alt="Grondwatermonitoringput" coords="564,275,1009,737" href="#global_class_Model_Grondwatermonitoringput"><area shape="rect" alt="Geo-ohmkabel" coords="148,802,346,947" href="#global_class_Model_Geoohmkabel"><area shape="rect" alt="Filter" coords="657,1475,925,1650" href="#global_class_Model_Filter"><area shape="rect" alt="Elektrode" coords="82,1018,411,1174" href="#global_class_Model_Elektrode"><area shape="rect" alt="Stijgbuisdeel" coords="780,1697,995,1801" href="#global_class_Model_Stijgbuisdeel"></map><p><b>Grondwatermonitorput (GMW)</b></p>
+               <div class="imageinfo overview"><img src="Images/EAID_E820AF53_7FB7_42e8_95C4_297D746526CE.png" usemap="#imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE" alt="Diagram &#xA;                        &#xA;                     "><map name="imagemap-EAID_E820AF53_7FB7_42e8_95C4_297D746526CE"><area shape="rect" alt="Registratieobject" coords="655,42,928,217" href="#global_class_Model_Registratieobject"><area shape="rect" alt="Geotechnisch Sondeeronderzoek" coords="1360,650,1587,753" href="#global_class_Model_GeotechnischSondeeronderzoek"><area shape="rect" alt="Verkenning" coords="1141,613,1262,663" href="#global_class_Model_Verkenning"><area shape="rect" alt="Booronderzoek" coords="1360,534,1587,637" href="#global_class_Model_Booronderzoek"><area shape="rect" alt="Monitoringbuis" coords="534,805,1025,1234" href="#global_class_Model_Monitoringbuis"><area shape="rect" alt="Toegepast materiaal" coords="534,1299,806,1438" href="#global_class_Model_Toegepastmateriaal"><area shape="rect" alt="Ingeplaatst deel" coords="1168,970,1482,1108" href="#global_class_Model_Ingeplaatstdeel"><area shape="rect" alt="Zandvang" coords="1168,805,1370,910" href="#global_class_Model_Zandvang"><area shape="rect" alt="Grondwatermonitoringput" coords="564,274,1007,735" href="#global_class_Model_Grondwatermonitoringput"><area shape="rect" alt="Geo-ohmkabel" coords="147,801,345,946" href="#global_class_Model_Geoohmkabel"><area shape="rect" alt="Filter" coords="656,1472,924,1647" href="#global_class_Model_Filter"><area shape="rect" alt="Elektrode" coords="82,1017,411,1172" href="#global_class_Model_Elektrode"><area shape="rect" alt="Stijgbuisdeel" coords="779,1695,993,1799" href="#global_class_Model_Stijgbuisdeel"></map><p><b>Grondwatermonitorput (GMW)</b></p>
                </div>
             </section>
          </section>
@@ -1282,7 +1282,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77053e5836">
+                  <section id="detail_d76973e5836">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1321,7 +1321,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77053e6021">
+                  <section id="detail_d76973e6021">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1359,7 +1359,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77053e6206">
+                  <section id="detail_d76973e6206">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1398,7 +1398,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77053e6391">
+                  <section id="detail_d76973e6391">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1436,7 +1436,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77053e6576">
+                  <section id="detail_d76973e6576">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1475,7 +1475,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77053e6761">
+                  <section id="detail_d76973e6761">
                      <h4>  monitoringbuis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2283,7 +2283,7 @@
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
                               <td>
-                                 OnvolledigeDatum
+                                 Datum
                                  </td>
                            </tr>
                            <tr>
@@ -2296,6 +2296,10 @@
                                  
                                  <p>De <em>inrichtingsdatum put</em> mag niet liggen na het <em>tijdstip registratie object</em>.</p>
                                  </td>
+                           </tr>
+                           <tr>
+                              <th>Regels IMBRO/A</th>
+                              <td>OnvolledigeDatum</td>
                            </tr>
                            <tr>
                               <th>Materiële geschiedenis</th>
@@ -2346,8 +2350,12 @@
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
                               <td>
-                                 OnvolledigeDatum
+                                 Datum
                                  </td>
+                           </tr>
+                           <tr>
+                              <th>&nbsp;&nbsp;Naam IMBRO/A</th>
+                              <td>OnvolledigeDatum</td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Waardebereik</th>
@@ -2376,7 +2384,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77053e9853">
+                  <section id="detail_d76973e9879">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2523,8 +2531,12 @@
                            <tr>
                               <th>&nbsp;&nbsp;Naam</th>
                               <td>
-                                 OnvolledigeDatum
+                                 Datum
                                  </td>
+                           </tr>
+                           <tr>
+                              <th>&nbsp;&nbsp;Naam IMBRO/A</th>
+                              <td>OnvolledigeDatum</td>
                            </tr>
                            <tr>
                               <th>&nbsp;&nbsp;Waardebereik</th>
@@ -3968,7 +3980,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77053e15663">
+                  <section id="detail_d76973e15703">
                      <h4>  toegepast materiaal</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4007,7 +4019,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77053e15866">
+                  <section id="detail_d76973e15906">
                      <h4>  filter</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4046,7 +4058,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77053e16069">
+                  <section id="detail_d76973e16109">
                      <h4>  stijgbuisdeel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4085,7 +4097,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77053e16272">
+                  <section id="detail_d76973e16312">
                      <h4>  zandvang</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4124,7 +4136,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77053e16475">
+                  <section id="detail_d76973e16515">
                      <h4>  ingeplaatst deel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4163,7 +4175,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d77053e16678">
+                  <section id="detail_d76973e16718">
                      <h4>  geo-ohmkabel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -5027,7 +5039,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d77053e20072">
+                  <section id="detail_d76973e20112">
                      <h4>  elektrode</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
