--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20231201</p>
       <p>Imvertor: 3.0.0</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.09-1-20231201-20240313-085037</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.09-1-20231201-20240313-090144</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -1282,7 +1282,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d76973e5836">
+                  <section id="detail_d76972e5836">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1321,7 +1321,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76973e6021">
+                  <section id="detail_d76972e6021">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1359,7 +1359,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76973e6206">
+                  <section id="detail_d76972e6206">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1398,7 +1398,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76973e6391">
+                  <section id="detail_d76972e6391">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1436,7 +1436,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76973e6576">
+                  <section id="detail_d76972e6576">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1475,7 +1475,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76973e6761">
+                  <section id="detail_d76972e6761">
                      <h4>  monitoringbuis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -2287,6 +2287,10 @@
                                  </td>
                            </tr>
                            <tr>
+                              <th>&nbsp;&nbsp;Naam IMBRO/A</th>
+                              <td>OnvolledigeDatum</td>
+                           </tr>
+                           <tr>
                               <th>&nbsp;&nbsp;Waardebereik</th>
                               <td>1 januari 1889  tot heden</td>
                            </tr>
@@ -2296,10 +2300,6 @@
                                  
                                  <p>De <em>inrichtingsdatum put</em> mag niet liggen na het <em>tijdstip registratie object</em>.</p>
                                  </td>
-                           </tr>
-                           <tr>
-                              <th>Regels IMBRO/A</th>
-                              <td>OnvolledigeDatum</td>
                            </tr>
                            <tr>
                               <th>Materiële geschiedenis</th>
@@ -2384,7 +2384,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d76973e9879">
+                  <section id="detail_d76972e9879">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3980,7 +3980,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d76973e15703">
+                  <section id="detail_d76972e15703">
                      <h4>  toegepast materiaal</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4019,7 +4019,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76973e15906">
+                  <section id="detail_d76972e15906">
                      <h4>  filter</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4058,7 +4058,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76973e16109">
+                  <section id="detail_d76972e16109">
                      <h4>  stijgbuisdeel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4097,7 +4097,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76973e16312">
+                  <section id="detail_d76972e16312">
                      <h4>  zandvang</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4136,7 +4136,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76973e16515">
+                  <section id="detail_d76972e16515">
                      <h4>  ingeplaatst deel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4175,7 +4175,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76973e16718">
+                  <section id="detail_d76972e16718">
                      <h4>  geo-ohmkabel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -5039,7 +5039,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d76973e20112">
+                  <section id="detail_d76972e20112">
                      <h4>  elektrode</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
