--- a/data/GMW-cat.respec.html
+++ b/data/GMW-cat.respec.html
@@ -1258,7 +1258,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d76968e5836">
+         <section id="detail_d76972e5863">
             <h4>  aangeleverde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1297,7 +1297,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76968e6021">
+         <section id="detail_d76972e6048">
             <h4>  aangeleverde verticale positie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1335,7 +1335,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76968e6206">
+         <section id="detail_d76972e6233">
             <h4>  gestandaardiseerde locatie</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1374,7 +1374,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76968e6391">
+         <section id="detail_d76972e6418">
             <h4>  registratiegeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1412,7 +1412,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76968e6576">
+         <section id="detail_d76972e6603">
             <h4>  putgeschiedenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1451,7 +1451,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76968e6761">
+         <section id="detail_d76972e6788">
             <h4>  monitoringbuis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -1539,6 +1539,14 @@
                   <tr>
                      <th>Materiële geschiedenis</th>
                      <td>Nee</td>
+                  </tr>
+                  <tr>
+                     <th>Toelichting</th>
+                     <td>
+                        
+                        <p>De grondwatermonitoringput kan gerelateerd zijn aan één of meerdere verkenning(en).
+                           Ieder relevante verkenning is vastgelegd als aparte keuze.</p>
+                        </td>
                   </tr>
                </tbody>
             </table>
@@ -2360,7 +2368,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d76968e9879">
+         <section id="detail_d76972e9906">
             <h4>  tussentijdse gebeurtenis</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3606,10 +3614,12 @@
                      <th>Toelichting</th>
                      <td>
                         
-                        <p>De binnendiameter van een monitoringbuis is doorgaans het grootst aan de bovenkant.
-                           Het gegeven vertelt of er een drukopnemer in de buis kan worden geplaatst. Ook geeft
-                           het enige informatie over de toestroomsnelheid van het grondwater, omdat het de bovengrens
-                           bepaalt voor de diameter van het filter.</p>
+                        <p>De binnendiameter van een monitoringbuis kan variëren. In dat geval is attribuut <em>variabele diameter</em> gelijk aan ja. Het gegeven <em>diameter bovenkant buis</em> vertelt bijvoorbeeld of apparatuur als een drukopnemer in de buis kan worden ingebracht,
+                           waarbij het echter afhankelijk is van het verloop van de binnendiameter of deze op
+                           de gewenste diepte geplaatst kan worden. Ook geeft het enige informatie over het volume
+                           dat uit de buis gepompt moet worden voor waterkwaliteitsmonsters en over de snelheid
+                           waarmee de waterstand in de buis in evenwicht komt met een verandering van de grondwaterstijghoogte
+                           bij het filter van de buis.</p>
                         </td>
                   </tr>
                </tbody>
@@ -3956,7 +3966,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d76968e15703">
+         <section id="detail_d76972e15735">
             <h4>  toegepast materiaal</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -3995,7 +4005,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76968e15906">
+         <section id="detail_d76972e15938">
             <h4>  filter</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4034,7 +4044,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76968e16109">
+         <section id="detail_d76972e16141">
             <h4>  stijgbuisdeel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4073,7 +4083,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76968e16312">
+         <section id="detail_d76972e16344">
             <h4>  zandvang</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4112,7 +4122,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76968e16515">
+         <section id="detail_d76972e16547">
             <h4>  ingeplaatst deel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -4151,7 +4161,7 @@
                </tbody>
             </table>
          </section>
-         <section id="detail_d76968e16718">
+         <section id="detail_d76972e16750">
             <h4>  geo-ohmkabel</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
@@ -5015,7 +5025,7 @@
                </tbody>
             </table>
             </section>
-         <section id="detail_d76968e20112">
+         <section id="detail_d76972e20144">
             <h4>  elektrode</h4>
             <table style="width: 100%;">
                <colgroup style="width: 30%;"></colgroup>
