--- a/data/GMW-cat.msword.html
+++ b/data/GMW-cat.msword.html
@@ -15,7 +15,7 @@
    <body>
       <p>Conceptual model/GMW conceptueel MIM/20231201</p>
       <p>Imvertor: 3.0.0</p>
-      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.09-1-20231201-20240313-092107</p>
+      <p>Model release: Conceptualmodel-GMWconceptueelMIM-1.09-1-20231201-20240321-121152</p>
       <hr>
       <section>
          <h1>Artikel 1 Definitie van registratieobject, entiteiten en attributen</h1>
@@ -1282,7 +1282,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d76968e5836">
+                  <section id="detail_d76972e5863">
                      <h4>  aangeleverde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1321,7 +1321,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76968e6021">
+                  <section id="detail_d76972e6048">
                      <h4>  aangeleverde verticale positie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1359,7 +1359,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76968e6206">
+                  <section id="detail_d76972e6233">
                      <h4>  gestandaardiseerde locatie</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1398,7 +1398,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76968e6391">
+                  <section id="detail_d76972e6418">
                      <h4>  registratiegeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1436,7 +1436,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76968e6576">
+                  <section id="detail_d76972e6603">
                      <h4>  putgeschiedenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1475,7 +1475,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76968e6761">
+                  <section id="detail_d76972e6788">
                      <h4>  monitoringbuis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -1563,6 +1563,14 @@
                            <tr>
                               <th>Materiële geschiedenis</th>
                               <td>Nee</td>
+                           </tr>
+                           <tr>
+                              <th>Toelichting</th>
+                              <td>
+                                 
+                                 <p>De grondwatermonitoringput kan gerelateerd zijn aan één of meerdere verkenning(en).
+                                    Ieder relevante verkenning is vastgelegd als aparte keuze.</p>
+                                 </td>
                            </tr>
                         </tbody>
                      </table>
@@ -2384,7 +2392,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d76968e9879">
+                  <section id="detail_d76972e9906">
                      <h4>  tussentijdse gebeurtenis</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -3630,10 +3638,12 @@
                               <th>Toelichting</th>
                               <td>
                                  
-                                 <p>De binnendiameter van een monitoringbuis is doorgaans het grootst aan de bovenkant.
-                                    Het gegeven vertelt of er een drukopnemer in de buis kan worden geplaatst. Ook geeft
-                                    het enige informatie over de toestroomsnelheid van het grondwater, omdat het de bovengrens
-                                    bepaalt voor de diameter van het filter.</p>
+                                 <p>De binnendiameter van een monitoringbuis kan variëren. In dat geval is attribuut <em>variabele diameter</em> gelijk aan ja. Het gegeven <em>diameter bovenkant buis</em> vertelt bijvoorbeeld of apparatuur als een drukopnemer in de buis kan worden ingebracht,
+                                    waarbij het echter afhankelijk is van het verloop van de binnendiameter of deze op
+                                    de gewenste diepte geplaatst kan worden. Ook geeft het enige informatie over het volume
+                                    dat uit de buis gepompt moet worden voor waterkwaliteitsmonsters en over de snelheid
+                                    waarmee de waterstand in de buis in evenwicht komt met een verandering van de grondwaterstijghoogte
+                                    bij het filter van de buis.</p>
                                  </td>
                            </tr>
                         </tbody>
@@ -3980,7 +3990,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d76968e15703">
+                  <section id="detail_d76972e15735">
                      <h4>  toegepast materiaal</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4019,7 +4029,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76968e15906">
+                  <section id="detail_d76972e15938">
                      <h4>  filter</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4058,7 +4068,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76968e16109">
+                  <section id="detail_d76972e16141">
                      <h4>  stijgbuisdeel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4097,7 +4107,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76968e16312">
+                  <section id="detail_d76972e16344">
                      <h4>  zandvang</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4136,7 +4146,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76968e16515">
+                  <section id="detail_d76972e16547">
                      <h4>  ingeplaatst deel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -4175,7 +4185,7 @@
                         </tbody>
                      </table>
                   </section>
-                  <section id="detail_d76968e16718">
+                  <section id="detail_d76972e16750">
                      <h4>  geo-ohmkabel</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
@@ -5039,7 +5049,7 @@
                         </tbody>
                      </table>
                      </section>
-                  <section id="detail_d76968e20112">
+                  <section id="detail_d76972e20144">
                      <h4>  elektrode</h4>
                      <table style="width: 100%;">
                         <colgroup style="width: 30%;"></colgroup>
