--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
 		<section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"></section>
 		<section id="domeinen">
 			<h3>Domeinen</h3>
-			<div id="domeinen-intro" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></div>
+			<section id="domeinen-intro" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></section>
 			<section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html"></section>
 			<section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html"></section>
 			<section id="gemeten waarden">
 				<h4>Gemeten waarden</h4>
-				<div id="gemeten-waarden-intro" data-include="https://docs.geostandaarden.nl/bro/gen/gemeten-waarden-intro.html"></div>
+				<section id="gemeten-waarden-intro" data-include="https://docs.geostandaarden.nl/bro/gen/gemeten-waarden-intro.html"></section>
 				<section id="meetwaarde" data-include="https://docs.geostandaarden.nl/bro/gen/meetwaarde.html"></section>
-				<div id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></div>
+				<section id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></section>
 			</section>
 			<section id="nummer" data-include="https://docs.geostandaarden.nl/bro/gen/nummer.html"></section>
 			<section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html"></section>
 			<section id="tijdstip" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html"></section>
 			<section id="waardelijsten">
 				<h4>Waardelijsten</h4>
-				<div id="waardelijst-intro" data-include="https://docs.geostandaarden.nl/bro/gen/waardelijst.html"></div>
+				<section id="waardelijst-intro" data-include="https://docs.geostandaarden.nl/bro/gen/waardelijst.html"></section>
 				<section id="waardelijst-niet-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/enumeratie.html"></section>
 				<section id="waardelijst-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/codelijst.html"></section>
 			</section>
@@ -93,10 +93,10 @@
 	</section>
 
 	<!-- Hoofdstukken 6 en 7. Gegevensdefinitie en Uitbreidbare waardenlijsten  -->
-	<div
+	<section
 		data-include="data/GMW-cat.respec.html"
 		data-include-replace=true>
-	</div>
+	</section>
 
 	<!--script src="https://docs.geostandaarden.nl/bro/gen/js/resizeImageMap.js"></script-->
 	<!-- Leaflet required for panZoomImage-->
