--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 				<section id="waardelijst-niet-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/enumeratie.html"></section>
 				<section id="waardelijst-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/codelijst.html"></section>
 			</section>
-			<section id="coordinatenpaar" data-include="https://docs.geostandaarden.nl/bro/gen/coordinatenpaar.html"></section>
+			<section id="coordinatenpaar" data-include="https://docs.geostandaarden.nl/bro/gen/cors.php?url=https://docs.geostandaarden.nl/bro/gen/coordinatenpaar.html"></section>
 			<section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html"></section>
 		</section>
 		<section id="domeinmodel" data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html"></section>
