--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<section id='leeswijzer' data-include='leeswijzer.md' data-include-format='markdown'></section>
 			<section id='doel-en-doelgroep' data-include='https://docs.geostandaarden.nl/bro/gen/doel-en-doelgroep.html'></section>
 			<section id='totstandkoming' data-include='https://docs.geostandaarden.nl/bro/gen/totstandkoming.html'></section>
-			<section id='beheer' data-include='https://docs.geostandaarden.nl/bro/gen/beheer.html'></section>
+			<section id='beheer' data-include='https://docs.geostandaarden.nl/bro/gen/cors.php?url=https://docs.geostandaarden.nl/bro/gen/beheer.html'></section>
 	</section>
 
 	<!-- Hoofdstuk 2. Algemene kenmerken en bergippen -->
@@ -64,32 +64,32 @@
 		class='generic informative'>
 
 		<h2>Opbouw van de gegevensdefinitie</h2>
-		<section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"></section>
+		<section id="intro-cat-inleiding" data-include="https://docs.geostandaarden.nl/bro/gen/cors.php?url=https://docs.geostandaarden.nl/bro/gen/intro-cat-inleiding.html"></section>
 		<section id="domeinen">
 			<h3>Domeinen</h3>
-			<section id="domeinen-intro" data-include="https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></section>
+			<section id="domeinen-intro" data-include="https://docs.geostandaarden.nl/bro/gen/cors.php?url=https://docs.geostandaarden.nl/bro/gen/domeinen-intro.html"></section>
 			<section id="aantal" data-include="https://docs.geostandaarden.nl/bro/gen/aantal.html"></section>
 			<section id="code" data-include="https://docs.geostandaarden.nl/bro/gen/code.html"></section>
 			<section id="gemeten waarden">
 				<h4>Gemeten waarden</h4>
 				<section id="gemeten-waarden-intro" data-include="https://docs.geostandaarden.nl/bro/gen/gemeten-waarden-intro.html"></section>
 				<section id="meetwaarde" data-include="https://docs.geostandaarden.nl/bro/gen/meetwaarde.html"></section>
-				<section id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></section>
+				<section id="inname-gemeten-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/cors.php?url=https://docs.geostandaarden.nl/bro/gen/inname-gemeten-waarden.html"></section>
 			</section>
 			<section id="nummer" data-include="https://docs.geostandaarden.nl/bro/gen/nummer.html"></section>
 			<section id="tekst" data-include="https://docs.geostandaarden.nl/bro/gen/tekst.html"></section>
-			<section id="tijdstip" data-include="https://docs.geostandaarden.nl/bro/gen/datumtijd.html"></section>
+			<section id="tijdstip" data-include="https://docs.geostandaarden.nl/bro/gen/cors.php?url=https://docs.geostandaarden.nl/bro/gen/datumtijd.html"></section>
 			<section id="waardelijsten">
 				<h4>Waardelijsten</h4>
 				<section id="waardelijst-intro" data-include="https://docs.geostandaarden.nl/bro/gen/waardelijst.html"></section>
-				<section id="waardelijst-niet-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/enumeratie.html"></section>
+				<section id="waardelijst-niet-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/cors.php?url=https://docs.geostandaarden.nl/bro/gen/enumeratie.html"></section>
 				<section id="waardelijst-uitbreidbaar" data-include="https://docs.geostandaarden.nl/bro/gen/codelijst.html"></section>
 			</section>
 			<section id="coordinatenpaar" data-include="https://docs.geostandaarden.nl/bro/gen/cors.php?url=https://docs.geostandaarden.nl/bro/gen/coordinatenpaar.html"></section>
-			<section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/organisatie.html"></section>
+			<section id="organisatie" data-include="https://docs.geostandaarden.nl/bro/gen/cors.php?url=https://docs.geostandaarden.nl/bro/gen/organisatie.html"></section>
 		</section>
-		<section id="domeinmodel" data-include="https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html"></section>
-		<section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html"></section>
+		<section id="domeinmodel" data-include="https://docs.geostandaarden.nl/bro/gen/cors.php?url=https://docs.geostandaarden.nl/bro/gen/domeinmodel-gen.html"></section>
+		<section id="verplichte-gegevens-waarden" data-include="https://docs.geostandaarden.nl/bro/gen/cors.php?url=https://docs.geostandaarden.nl/bro/gen/verplichte-gegevens-waarden.html"></section>
 	</section>
 
 	<!-- Hoofdstukken 6 en 7. Gegevensdefinitie en Uitbreidbare waardenlijsten  -->
